@@ -1,3 +1,10 @@
+2009-02-17  Andrea Cimitan  <andrea.cimitan@gmail.com>
+
+	* src/murrine_draw.c (murrine_draw_scrollbar_slider):
+	* src/murrine_draw_rgba.c (murrine_rgba_draw_scrollbar_slider):
+	* src/murrine_style.c (murrine_style_draw_box):
+	Align scrollbar's handles.
+
 2009-02-02  Andrea Cimitan  <andrea.cimitan@gmail.com>
 
 	* src/murrine_draw.c (murrine_draw_tab):
